[tool.poetry]
name = "coron"
version = "0.1.0"
description = "A default visualization for covid-19 model"
authors = ["Daniel Hnyk <hnykda@gmail.com>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^1.4.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "black"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.761"
pytest-mypy = "^0.5.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
