[tool.poetry]
name = "coron"
version = "0.1.0"
description = "A default visualization for covid-19 model"
authors = ["Daniel Hnyk <hnykda@gmail.com>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "2.0.0"
pandas = "^1.0.1"
fastapi = "^0.52.0"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
